--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -373,7 +373,7 @@
 }
 
 .dark {
-    --color-rhit-maroon: #9c1f1f;
+    --color-rhit-maroon: #800000;
     --color-rhit-maroon-soft: #b03030;
 
     --color-sase-blue: #4d8fdc;
